BasicInfo part done except TextInput Icon

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,5 +14,52 @@
         "and": " and ",
         "us_policy": " \"U.S. Privacy Policy.\"",
         "register_note": "By using registering your Beem Account, you confirm your agreement to be bound by the Beem "
+    },
+    "createNewTour": {
+        "basic_info": "BASIC INFORMATION",
+        "create_new_tour": "New Tour",
+        "upload_pictures": "Upload Pictures",
+        "required_fields": "Required fields",
+        "cover_photos": "Cover Photos",
+        "experience_name": "Experience Name",
+        "enter_a_tour_name": "Enter a tour name",
+        "location": "Location",
+        "select_a_location": "Select a Location",
+        "experience_type": "Experience Type",
+        "select_a_tour_type": "Select a tour type",
+        "means_of_getting_arround": "Means of Getting Around",
+        "select_a_transportation_method": "Select a transportation method",
+        "maximum_participants": "Maximum Participants",
+        "maximum_number_of_participants": "Maximum number of participants",
+        "shared_private_experience": "Shared or Private Experience",
+        "select_a_tour_option": "Select a tour option",
+        "duration": "Duration",
+        "total_duration_of_the_tour": "Total duration of the tour",
+        "base_shared_price": "Base Shared Price",
+        "base_private_price": "Base Private Price",
+        "extra_person_price": "Extra Person Price",
+        "base_shared_price_of_the_tour": "Base shared price of the experience",
+        "base_private_price_of_the_tour": "Base private price of the experience",
+        "additional_price_of_the_tour": "Additional price of the experience",
+        "experience_description": "Experience Description",
+        "a_small_description_about_the_tour": "A Small description about the experience",
+        "language_offer": "Languages Offered",
+        "restrictions": "Restrictions",
+        "cancel": "Cancel",
+        "sure_continue": "Finalize and proceed with listing submission?",
+        "experience_region": "Experience Region",
+        "inclusions": "INCLUSIONS",
+        "inclusion_type": "Inclusion Type",
+        "inclusion_description": "Inclusion Description",
+        "add_inclusion": "Add Inclusion",
+        "suggested_to_bring": "Suggested to Bring",
+        "availability": "SET AVAILABILITY",
+        "calendar_preview": "CALENDAR PREVIEW",
+        "select_date": "Start Date",
+        "available_date": "Available Date",
+        "select_time": "Occurrence Start Time",
+        "select_times": "Select Time(s)",
+        "from": "From",
+        "to": "To"
     }
 }
