BasicInfo Tab Done

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -60,6 +60,85 @@
         "select_time": "Occurrence Start Time",
         "select_times": "Select Time(s)",
         "from": "From",
-        "to": "To"
+        "to": "To",
+        "recurring": "Recurring?",
+        "daily_recurrence": "Daily Recurrence",
+        "recurrence_end_date": "Recurrence End Date",
+        "recurrence_exceptions": "Recurrence Exceptions",
+        "add_exceptions": "Add Exceptions",
+        "set_date": "Set Date(s)",
+        "instantly_confirmed": "Instantly Confirmed?",
+        "confirmation_policy": "By listing this activity as instantly confirmed, I confirm I reviewed, understood, and agree with the",
+        "policy": "Beem's Instant Confirmation Policy.",
+        "cancellation_policy": "Cancellation Policy",
+        "cancellation_details": "By listing this activity with the above specified cancellation policy, I confirm I reviewed, understood, and agree with",
+        "policies": "Beem's Cancellation Policies.",
+        "available_times": "Available Times",
+        "proposed_agenda": "PROPOSED AGENDA",
+        "agenda_description": "Agenda Description",
+        "introduction_to_your_tour_agenda": "Introduction to your tour agenda",
+        "agenda_start": "Agenda Start",
+        "starting_location": "Starting Location",
+        "starting_description": "Starting Description",
+        "title": "Title",
+        "heading": "Heading",
+        "add_item": "Add Item",
+        "remove_item": "Remove Item",
+        "description": "Description",
+        "agenda_item_1": "Agenda Item 1",
+        "pictures": "Pictures",
+        "agenda_item": "Agenda Item",
+        "agenda_end": "Agenda End",
+        "wrap_up_location": "Wrap Up Location",
+        "wrap_up_description": "Wrap Up Description",
+        "save_next_section": "Save & Next Section",
+        "save_show_missing": "Finalize & Submit section",
+        "incomplete_listing": "Incomplete Listing",
+        "show_missing_fields": "Show Missing Fields",
+        "add_availability_exception": "Add Availability Exception",
+        "all_day_exception": "All Day Exception?",
+        "save_changes": "Save Changes",
+        "all_day_exception_text": "All day exceptions do not support selecting specific times of day.",
+        "other_text": "You may separately add exceptions with specific times of day after this entry.",
+        "thank_you": "Thank you for submitting this listing.",
+        "we_will_notify": "We will notify you as soon as this listing is approved or if additional information is needed for approval.",
+        "continue": "Continue",
+        "beem_supports": "Beem supports a maximum of 10 participants per experience. This limit helps ensure our users can enjoy a personalized and exclusive experience.\n\nCompanies with multiple guides using Beem may override this limit provided one guide will host a maximum of 10 participants per experience.\n",
+        "please_review_the": "Please review the",
+        "beem_listing": "Beem Listing Addendum Agreement",
+        "for_more": "for more information.",
+        "participant_limit_reached": "Participant Limit Reached",
+        "i_understand": "I Understand",
+        "companies_with": "Companies with multiple guides using Beem may override this limit provided one guide will host a maximum of 10 participants per experience.\n",
+        "hosting_experiences": "Hosting experiences where a guide is leading more than 10 participants may negatively affect the experience and is a violation of the.",
+        "confirm": "Confirm",
+        "restrictions_detail": "Can this experience accommodate someone with certain dietary, accessibility, or legal restrictions?",
+        "inclusions_heading": "Inclusions",
+        "inclusions_detail": "Any specific deliverables guests can expect from this experience?",
+        "exception_select_date": "Exception Select Date",
+        "exception_select_date_detail": "Select either one date or a date range on the calendar.\n\nAll specified times of day will have the recurrence exception apply to the selected date(s).\n\nThis process may be repeated as necessary to specify different combinations of date ranges and times of day.",
+        "select_time_modal": "Select Time",
+        "exception_select_time_detail": "Select either one date or a date range on the calendar.\n\nAll specified times of day will have the recurrence exception apply to the selected date(s).\n\nThis process may be repeated as necessary to specify different combinations of date ranges and times of day.",
+        "setting_recurrence": "Setting Recurrence",
+        "setting_recurrence_details": "Please indicate which occurrence(s) are applicable for recurrence.\n\nRecurring occurrences are highlighted in orange as shown in the example below.",
+        "edit_occurrence": "Edit Occurrence",
+        "total_participants": "Total Participants",
+        "edit_occurrence_details": "The total is automatically computed from your confirmed participants. This timeslot will delist automatically as fully booked based on this total. For your convenience, you may adjust this total with extra participants to account for possible bookings made outside of Beem.",
+        "delete_occurrence": "Delete Occurrence",
+        "delete_occurrence_details1": "This action is irreversible and will delete and delist this timeslot from Beem. This action will not affect existing bookings.",
+        "delete_occurrence_details2": "\nTo cancel an existing booking, please reference the help menu found in the specific booking.Are you sure you want to delete and delist this timeslot?",
+        "planning_holidays": "Planning for the holidays? Use the exception editor below to block out times where the above specified recurrences will not apply.\n\nIt is also possible to edit or delete individual availability entries under the Calendar Preview.",
+        "daily_recurrences": "Daily recurrences can repeat for up to 90 days from the start date.",
+        "weekly_recurrences": "Weekly recurrences require indicating the day(s) of the week and can repeat for up to 40 weeks from the start date.",
+        "more_times": "More Times",
+        "add_time": "Add Time",
+        "inclusion_description_details": "Inclusion Description Placeholder",
+        "agenda_start_description": "Agenda Start Description",
+        "agenda_start_description_details": "Agenda Start Description Placeholder",
+        "agenda_end_description": "Agenda Wrap Up Description",
+        "agenda_end_description_details": "Agenda Wrap Up Description Placeholder",
+        "cancellation_policy_details": "Cancellation Policy Placeholder",
+        "finalize_and_submit_section": "Finalize & Submit Section",
+        "save_and_next": "Save & Next Section"
     }
 }
