UserProfile Screen done

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -140,5 +140,34 @@
         "cancellation_policy_details": "Cancellation Policy Placeholder",
         "finalize_and_submit_section": "Finalize & Submit Section",
         "save_and_next": "Save & Next Section"
+    },
+    "my_profile": {
+        "profile_setup": "Profile Setup",
+        "upload_picture": "Upload Picture",
+        "complete_profile": "Complete Profile",
+        "spoken_languages": "Spoken Languages",
+        "what_i_offer": "What I Offer",
+        "about_me": "About Me",
+        "nationality": "Nationality",
+        "name": "Name",
+        "first_name": "First Name",
+        "last_name": "Last Name",
+        "business_entity": "Business Entity",
+        "ein": "EIN / TIN / CRN",
+        "ein_details": "Please indicate the Employer Identification Number (EIN) or Taxpayer Identification Number (TIN) of the Business Entity.\n\nAlternatively a Company Registration Number (CRN) may be provided instead.\n\nBeem will validate identifying information for the Business Entity before any experience listings can be published.",
+        "business_name": "Business Name",
+        "business_country": "Country of Business",
+        "save_changes": "Save Changes",
+        "verified": "Verified",
+        "pending_verification": "Pending Verification",
+        "the_foregoing_information": "The foregoing information was submitted in support of my End User License Agreement with Beem, I declared, certified, verified, and stated under penalty of perjury that the foregoing information is true and correct.",
+        "business_entity_label": "Do you represent or are a part of a company or business entity intending to list experiences on our platform?",
+        "identification_type": "Identification Type",
+        "identification_scan": "Identification Scan",
+        "let_people_know_about_yourself": "Let people know about yourself",
+        "select_what_services_you_offer": "Select what services you offer",
+        "languages_you_are_good_at": "Languages you are good at",
+        "business": "I certify under penalty of perjury I am legally authorized to represent the above business and on behalf of the above business, I confirm I reviewed, understand, and accept Beem's End User License Agreement.",
+        "identification": "By submitting the foregoing information in support of my End User License Agreement with Beem, I declare, certify, verify, and state under penalty of perjury that the foregoing information is true and correct."
     }
 }
