--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -372,5 +372,32 @@
         "paragraph26": "Beem’s Service is not available for use by persons under the age of 18. You may not authorize third parties to use your Account, and you may not allow persons under the age of 18 to receive services and goods, transportation, or logistics services from Third Party Providers unless they are accompanied by you. You may not assign or otherwise transfer your Account to any other person or entity. You agree to comply with all applicable laws when accessing or using Beem’s Services, and you may only access or use Beem’s Services for lawful purposes (e.g., no transport of unlawful or hazardous materials). You may not in your access or use of Beem’s Services cause nuisance, annoyance, inconvenience, or property damage, whether to the Third Party Provider or any other party. In certain instances you may be asked to provide proof of identity or other method of identity verification to access or use Beem’s Services, and you agree that you may be denied access to or use of Beem’s Services if you refuse to provide proof of identity or other method of identity verification.",
         "subheading16": "Text Messaging and Telephone Calls.",
         "paragraph27": "You agree that Beem may contact you by telephone or text messages (including by an automatic telephone dialing system) at any of the phone numbers provided by you or on your behalf in connection with a Beem account, including for marketing purposes. You understand that you are not required to provide this consent as a condition of purchasing any property, goods or services. You also understand that you may opt out of receiving text messages from Beem at any time, either by replying the word \"STOP\" using the mobile device that is receiving the messages, or by contacting help@beemtravel.com. If you do not choose to opt out, Beem may contact you as outlined in its U.S. Privacy Policy statement, located at www.beemtravel.com/legal/privacy."
+    },
+    "tipYourGuide": {
+        "tip_your_guide": "Tip Your Guide",
+        "tip_amount": "Tip Amount",
+        "select_amount": "Select from 10%, 20%, 30% or enter a custome amount",
+        "payment_total": "Payment Total",
+        "charged_amount": "You will be charged the following amount",
+        "comments": "Comments",
+        "comment_placeholder1": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+        "send_tip": "Send Tip",
+        "tip_policy_1": "Your Guide will receive the full payment amount without any playform and processing fees deducted from your tip.",
+        "tip_policy_2": "Please note tips are intended for gratuity only, these payments are non-refundable and should not be used as an alternative payment method for an experiance add-on or modification.",
+        "tip_policy_3": "Customer support will not be provided for any misuse of the tipping system for non-gratuity purposes.",
+        "tip_amount_data": [
+            {
+                "value": "10%"
+            },
+            {
+                "value": "15%"
+            },
+            {
+                "value": "20%"
+            },
+            {
+                "value": "Custom Amount"
+            }
+        ]
     }
 }
